implement progression part